@@ -1,4 +1,5 @@
 CONSOLE MESSAGE: ReferenceError: Can't find variable: __FUZZY_DATA__
+Test path:	__TEST_NAME__
 Pixel difference:	__PIXEL_DIFF__
 Fuzzy match:	Click to toggle between ranges and values
 	
