@@ -59,6 +59,10 @@
 </head>
 <body>
 <table class="controls">
+    <tr class="pixel-diff">
+        <td>Test path:</td>
+        <td>__TEST_NAME__</td>
+    </tr>
     <tr class="pixel-diff __HIDE_DIFF_CLASS__">
         <td>Pixel difference:</td>
         <td>__PIXEL_DIFF__</td>
